[tool.poetry]
name = "anytools"
version = "0.1.0"
description = ""
authors = ["bahamondex <oscar.bahamonde@oscarmartinbahamondemunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mistralai = {version = "^1.6.0"}
pydantic = "^2.11.0"
cachetools = "^5.5.2"
openai = {version = "^1.69.0", optional = true}
groq = {version = "^0.20.0", optional = true}
bs4 = {version="^0.0.2", optional = true}
lxml = {version="^5.3.1", optional = true}
selenium = {version="^4.30.0", optional = true}
webdriver-manager = {version="^4.0.2",optional=true}

[tool.poetry.extras]
openai = ["openai"]
groq = ["groq"]
mistralai = ["mistralai"]
search = ["bs4", "lxml", "selenium", "webdriver-manager"]
all = ["openai", "groq", "mistralai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

