[tool.poetry]
name = "anytools"
version = "0.1.0"
description = ""
authors = ["bahamondex <obahamondemunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mistralai = {version = "^1.6.0"}
pydantic = "^2.11.0"
cachetools = "^5.5.2"
anthropic = "^0.49.0"
openai = {version = "^1.69.0", optional = true}
groq = {version = "^0.20.0", optional = true}
bs4 = "^0.0.2"
lxml = "^5.3.1"
selenium = "^4.30.0"
webdriver-manager = "^4.0.2"
httpx = {extras = ["http2"], version = "^0.28.1"}


[tool.poetry.extras]
openai = ["openai"]
groq = ["groq"]
mistralai = ["mistralai"]
all = ["openai", "groq", "mistralai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

